UI design fixed and aligned properly according to window width

--- a/Assets/CSS/layout.css
+++ b/Assets/CSS/layout.css
@@ -32,4 +32,5 @@ i:hover{
     position: fixed;
     bottom: 0;
     right: 10%;
+    z-index: 100;
 }
